# Beetroot

./: .dockerignore  .env.template  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FIX.md  README.md  RELEASE.md  SECURITY.md  docker-compose.yml  template.sql
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
.sqlx/: query-1832a17cea1180f49fe6e2e021265a734a1b371f9dd4aa16df2bebec6383bf4b.json  query-2e37cc501330424049f2c6521b38c671778ab84ca8438e818361e59f1df0e25f.json  query-470f9eb401d38f59e069814bfcc766716527c8ed539c9cc4b8f2646fdcfee83d.json  query-535628fa6546be1f0664b64cbf8992fd45da1b4ddebbd660ae877c6b188d6ec7.json  query-6fe7067e3210ce63657df6fba2e9c4b9ffe788aaa309ba1c60664660950a56ba.json  query-8d89df44e96e395601c919695dcac02eb8b55f2564a24ece9f67b986624347bb.json  query-fb688786daf844e70d31d260260840deb297098fdfc80fb1593e069e3491cb40.json
crates/bot/: Cargo.toml
crates/bot/src/: data.rs  events.rs  macros.rs  main.rs
crates/bot/src/bot/: handler.rs  init.rs  mod.rs  version_checker.rs
crates/bot/src/bot/helpers/: command_handler.rs  pagination.rs
crates/bot/src/commands/: a1c.rs  add_sticker.rs  allow.rs  analyze_units.rs  bg.rs  convert.rs  error.rs  get_nightscout_url.rs  graph.rs  info.rs  mod.rs  set_threshold.rs  set_token.rs  set_visibility.rs  setup.rs  stickers.rs  token.rs
crates/bot/src/stickers/: mod.rs  overlay.rs
crates/bot/src/utils/: duration_parser.rs  mod.rs  nightscout.rs
crates/bot/src/utils/graph/: helpers.rs
crates/core/: Cargo.toml  build.rs
crates/core/migrations/: 20240101000000_init.sql  20260417000000_dashboard_sessions.sql  20260501000000_add_last_seen_version.sql
crates/core/src/: crypto.rs  error.rs  lib.rs
crates/core/src/db/: analytics.rs  mod.rs  session.rs  sticker.rs  user.rs
crates/core/src/models/: analytics.rs  mod.rs  session.rs  sticker.rs  user.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: changelog.rs  main.rs  onboarding.rs  routes.rs  settings.rs  stickers.rs
crates/dashboard/src/auth/: extractors.rs  mod.rs  oauth.rs
crates/dashboard/src/middleware/: csrf.rs  security.rs
crates/dashboard/src/templates/: layout.rs  pages.rs
crates/database/: Cargo.toml
crates/database/src/: crypto.rs  lib.rs  models.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
src/: main.rs
src/bot/: README.md  command_registry.rs  component_router.rs  event_handler.rs  version_checker.rs
src/bot/helpers/: components.rs  mod.rs
src/commands/: add_sticker.rs  allow.rs  analyze_units.rs  bg.rs  convert.rs  error.rs  get_nightscout_url.rs  graph.rs  help.rs  info.rs  mod.rs  remove_sticker.rs  set_nightscout_url.rs  set_threshold.rs  set_token.rs  set_visibility.rs  setup.rs  sticker.rs  stickers.rs  token.rs  update_message.rs
src/tests/: mod.rs  nightscout_tests.rs
src/utils/: database.rs  graph.rs  migration.rs  mod.rs  nightscout.rs
src/utils/graph/: drawing.rs  helpers.rs  mod.rs  stickers.rs  types.rs
