[package]
name = "sunshine"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "model", "cache"] }
tokio = { version = "1", features = ["full"] }
sled = "0.34"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15.7"
chrono = "0.4.42"
anyhow = "1.0.100"
