[package]
name = "beetroot"
version = "0.1.1"
edition = "2024"

[dependencies]
serenity = { version = "0.12", features = [
    "client",
    "gateway",
    "model",
    "cache",
    "utils",
    "collector"
] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
dotenvy = "0.15.7"
chrono = "0.4.42"
anyhow = "1.0.100"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
] }
thiserror = "2.0.16"
url = "2.5.7"
httpmock = "0.8.0"
serde_json = "1.0.145"
imageproc = "0.25.0"
image = "0.25.8"
ab_glyph = "0.2.31"
rand = "0.9.2"
chrono-tz = "0.10.4"
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
aes-gcm = "0.10.3"
base64 = "0.22.1"
blake3 = "1.5.1"
