[package]
name = "bot"
version = "1.0.0"
edition = "2024"

[dependencies]
cinnamon = "1.0.1"
bonbon = {version = "0.1.2", features = ["cinnamon"]}
poise = {git = "https://github.com/serenity-rs/poise", rev = "932351a"}
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
dotenvy = "0.15.7"
chrono = "0.4.43"
chrono-tz = "0.10.4"
regex = "1.12.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
anyhow = "1.0.101"
url = "2.5.8"
image = "0.25.9"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json"] }
futures = "0.3.32"
urlencoding = "2"

# Private Dependencies
macros = { path = "../macros" }
beetroot-core = { path = "../core" }
