[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
aes-gcm = "0.10"
blake3 = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dotenvy = "0.15"