[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "sqlite", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
aes-gcm = "0.10"
base64 = "0.22"
blake3 = "1.5"
dotenvy = "0.15"
tracing = "0.1"